# FFmpeg

app/: build.gradle
app/src/androidTest/java/com/tz/ffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/tz/ffmpegtest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/tz/ffmpegtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
